# SussyNet

./: .gitignore  Cargo.toml  README.md
examples/: xor.rs
examples/mnist/: .gitignore  Cargo.toml
examples/mnist/src/: main.rs
src/: lib.rs  main.rs
