[package]
name = "sussy_net"
version = "0.1.0"
edition = "2021"

[features]
save = ["bincode", "serde"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nalgebra = {version = "^0.31.0", features = ["serde-serialize"]}
rand = "^0.8.5"
bincode = {version = "^1.3.3", optional = true}
serde = {version = "^1.0.139", optional = true, features = ["serde_derive"]}